[gd_scene load_steps=3 format=2]

[ext_resource path="res://menus/lobby/lobby.gd" type="Script" id=1]
[ext_resource path="res://menus/lobby/single-player-row.tscn" type="PackedScene" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 305.0
margin_top = 216.0
margin_right = 719.0
margin_bottom = 384.0
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 407.0
margin_bottom = 161.0
rect_min_size = Vector2( 400, 0 )

[node name="RoomName" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 14.0
text = "Connecting ..."

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 400.0
margin_bottom = 42.0
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 72.0
margin_bottom = 19.0
text = "Your name:"
valign = 3

[node name="Name" type="LineEdit" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 76.0
margin_right = 400.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 400.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 55.0
margin_bottom = 19.0
text = "Your car:"

[node name="Car" type="LineEdit" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 59.0
margin_right = 400.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 400.0
margin_bottom = 98.0

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer4"]
margin_top = 5.0
margin_right = 38.0
margin_bottom = 19.0
text = "Level:"

[node name="Level" type="LineEdit" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer4"]
margin_left = 42.0
margin_right = 400.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 400.0
margin_bottom = 130.0

[node name="PlayerRows" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 21.0

[node name="Control" parent="CenterContainer/PanelContainer/VBoxContainer/PanelContainer/PlayerRows" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 386.0
margin_bottom = 14.0

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 400.0
margin_bottom = 154.0
alignment = 2

[node name="DisconnectButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 271.0
margin_right = 355.0
margin_bottom = 20.0
text = "Disconnect"

[node name="StartButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 359.0
margin_right = 400.0
margin_bottom = 20.0
text = "Start"
[connection signal="text_changed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Name" to="." method="_on_Name_text_changed"]
[connection signal="text_changed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer2/Car" to="." method="_on_Car_text_changed"]
[connection signal="text_changed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer4/Level" to="." method="_on_Level_text_changed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer3/DisconnectButton" to="." method="_on_DisconnectButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer3/StartButton" to="." method="_on_StartButton_pressed"]
